--- a/catalog.html
+++ b/catalog.html
@@ -189,7 +189,9 @@
                 </a>
               </p>
               <p class="stars-rate">
-                <span class="stars-four visually-hidden">4 звезды</span>
+                <span class="stars-four">
+                  <span class="visually-hidden">4 звезды</span>
+                </span>
                 <span class="hotel-rate">Рейтинг: 8,5</span>
               </p>
             </li>
@@ -215,7 +217,9 @@
                 </a>
               </p>
               <p class="stars-rate">
-                <span class="stars-four visually-hidden">4 звезды</span>
+                <span class="stars-four">
+                  <span class="visually-hidden">4 звезды</span>
+                </span>
                 <span class="hotel-rate">Рейтинг: 9,2</span>
               </p>
             </li>
@@ -240,7 +244,9 @@
                 </a>
               </p>
               <p class="stars-rate">
-                <span class="stars-three visually-hidden">3 звезды</span>
+                <span class="stars-three">
+                  <span class="visually-hidden">3 звезды</span>
+                </span>
                 <span class="hotel-rate">Рейтинг: 6,9</span>
               </p>
             </li>
@@ -265,7 +271,9 @@
                 </a>
               </p>
               <p class="stars-rate">
-                <span class="stars-two visually-hidden">2 звезды</span>
+                <span class="stars-two">
+                  <span class="visually-hidden">2 звезды</span>
+                </span>
                 <span class="hotel-rate">Рейтинг: 5,0</span>
               </p>
             </li>
